# SimpleServer

./: .gitmodules  CMakeLists.txt
include/: logs.hpp
include/ss/: AbstractRequestHandler.hpp  errors.hpp
src/ss/: Server.cpp
test/: README.md  main.cpp  ss_client
